other/e-l/ensure-production-matches-staging/deploy-bad-image.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: busybox
  name: deployment01
  namespace: production
spec:
  replicas: 1
  selector:
    matchLabels:
      app: busybox
  strategy: {}
  template:
    metadata:
      labels:
        app: busybox
    spec:
      containers:
      - image: busybox:1.28
        name: busybox
        command: ["sleep","3600"]
      - image: nginx:1.28
        name: busybox02
        command: ["sleep","3600"]
