other/e-l/ensure-production-matches-staging/values.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Values
policies:
- name: ensure-production-matches-staging
  resources:
  - name: deploy1
    values:
      request.namespace: production
  rules:
  - name: require-staging-deployment
    values:
      deployment_count: 2
      request.namespace: staging
  - name: require-same-image
    values:
      deployment_count: 2
      deployment_images: nginx
      request.namespace: staging
  - name: require-same-or-older-imageversion
    values:
      deployment_containers: 1.22.0
      deployment_count: 2
      request.namespace: staging
